[package]
name = "smooai-ui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "SmooAI design system — shared OKLCH tokens, base CSS, and the smoo monogram. Pure constants — no UI-framework dependency."
repository = "https://github.com/SmooAI/ui"
homepage = "https://github.com/SmooAI/ui"
keywords = ["smooai", "design-system", "ui", "css", "tokens"]
categories = ["gui", "config"]
readme = "README.md"
authors = ["SmooAI <brent@smoo.ai>"]
# Cargo can't pull files from outside the package root by default; we
# explicitly enumerate the cross-language `shared/` assets we want included
# so `cargo package` produces a self-contained tarball.
include = [
    "Cargo.toml",
    "README.md",
    "src/**/*.rs",
    "../shared/styles.css",
    "../shared/monogram.svg",
    "../LICENSE",
]

[dependencies]
# Deliberately empty — this crate is a `pub const &'static str` carrier so
# consumers don't inherit a UI-framework version pin.
